Changelog
=========

1.0b5 (unreleased)
------------------

* Dutch translation added.
  [kcleong]

* Enable caching and merging for comments.js to save some requests.
  [pelle]

* Design notes for the Captcha plugin architecture added.
  [timo]

* Make IDiscussionLayer inherit from Interface again. Remove IDefaultPloneLayer,
  since Plone 4.0b1 and plone.theme 2.0b1 are out now.
  [timo]

* Clean up Javascript code.
  [timo]

* Fix encoding error in migration procedure, otherwise migration procedure 
  breaks on joining output list in case we have there any non-ascii characters.
  [piv]

* plone.z3cform 0.6.0 compatibility (fix maximum recursion depth error which 
  appears with plone.z3cform higher than 0.5.10).
  [piv]
  
* Removed moderation.js from js registry and include it only in moderation.pt as
  that is the only place where it is used.
  [ggozad]


1.0b4 (2010-04-04)
------------------

* New feature: As a moderator, I am notified when new comments require my
  attention.
  [timo]

* Sphinx-based developer documentation added. See 
  http://packages.python.org/plone.app.discussion.
  [timo]

* Rename "Single State Workflow" to "Comment Single State Workflow".
  [timo]

* Rename 'publish comment' to 'approve comment'. This fixes #1608470.
  [timo]
  
* Show a warning in the moderation view if the moderation workflow is disabled.
  [timo]

* Move 'Moderate comments' link from site actions to user actions.
  [timo]

* Fix #662654: As an administrator, I can configure a Collection to show recent 
  comments. Comment.Type() now correctly returns the FTI title ('Comment')
  [chaoflow]

* German translation updated.
  [juh]
  
* Fix #2419342: Fix untranslated published/deleted status messages.
  [timo]
  
* Remove fixed width of the actions column of the moderation view. The
  translated button titles can differ in size from the English titles.
  [timo]

* Fix #2494228: Remove comments as well when a content object is deleted.
  [timo]
